--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-08-24 Mon 11:08 -->
+<!-- 2021-05-28 Fri 22:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Syllabus (FIN 302) Financial Management Principles</title>
@@ -40,7 +40,7 @@
   }
   pre.src {
     position: relative;
-    overflow: visible;
+    overflow: auto;
     padding-top: 1.2em;
   }
   pre.src:before {
@@ -52,7 +52,7 @@
     padding: 3px;
     border: 1px solid black;
   }
-  pre.src:hover:before { display: inline;}
+  pre.src:hover:before { display: inline; margin-top: 14px;}
   /* Languages per Org manual */
   pre.src-asymptote:before { content: 'Asymptote'; }
   pre.src-awk:before { content: 'Awk'; }
@@ -161,6 +161,19 @@
   .footdef  { margin-bottom: 1em; }
   .figure { padding: 1em; }
   .figure p { text-align: center; }
+  .equation-container {
+    display: table;
+    text-align: center;
+    width: 100%;
+  }
+  .equation {
+    vertical-align: middle;
+  }
+  .equation-label {
+    display: table-cell;
+    text-align: right;
+    vertical-align: middle;
+  }
   .inlinetask {
     padding: 10px;
     border: 2px solid gray;
@@ -180,57 +193,33 @@
   .org-svg { width: 90%; }
   /*]]>*/-->
 </style>
-<link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/styles/readtheorg/css/htmlize.css"/>
-<link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/styles/readtheorg/css/readtheorg.css"/>
+<link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/htmlize.css"/>
+<link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/readtheorg.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/styles/lib/js/jquery.stickytableheaders.min.js"></script>
-<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/styles/readtheorg/js/readtheorg.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/lib/js/jquery.stickytableheaders.min.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/readtheorg.js"></script>
 <script type="text/javascript">
-/*
-@licstart  The following is the entire license notice for the
-JavaScript code in this tag.
-
-Copyright (C) 2012-2017 Free Software Foundation, Inc.
-
-The JavaScript code in this tag is free software: you can
-redistribute it and/or modify it under the terms of the GNU
-General Public License (GNU GPL) as published by the Free Software
-Foundation, either version 3 of the License, or (at your option)
-any later version.  The code is distributed WITHOUT ANY WARRANTY;
-without even the implied warranty of MERCHANTABILITY or FITNESS
-FOR A PARTICULAR PURPOSE.  See the GNU GPL for more details.
-
-As additional permission under GNU GPL version 3 section 7, you
-may distribute non-source (e.g., minimized or compacted) forms of
-that code without the copy of the GNU GPL normally required by
-section 4, provided you include this license notice and a URL
-through which recipients can access the Corresponding Source.
-
-
-@licend  The above is the entire license notice
-for the JavaScript code in this tag.
-*/
+// @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
 <!--/*--><![CDATA[/*><!--*/
- function CodeHighlightOn(elem, id)
- {
-   var target = document.getElementById(id);
-   if(null != target) {
-     elem.cacheClassElem = elem.className;
-     elem.cacheClassTarget = target.className;
-     target.className = "code-highlighted";
-     elem.className   = "code-highlighted";
-   }
- }
- function CodeHighlightOff(elem, id)
- {
-   var target = document.getElementById(id);
-   if(elem.cacheClassElem)
-     elem.className = elem.cacheClassElem;
-   if(elem.cacheClassTarget)
-     target.className = elem.cacheClassTarget;
- }
-/*]]>*///-->
+     function CodeHighlightOn(elem, id)
+     {
+       var target = document.getElementById(id);
+       if(null != target) {
+         elem.classList.add("code-highlighted");
+         target.classList.add("code-highlighted");
+       }
+     }
+     function CodeHighlightOff(elem, id)
+     {
+       var target = document.getElementById(id);
+       if(null != target) {
+         elem.classList.remove("code-highlighted");
+         target.classList.remove("code-highlighted");
+       }
+     }
+    /*]]>*///-->
+// @license-end
 </script>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -262,27 +251,27 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf09f138">1. Description</a>
+<li><a href="#orgdd4454c">1. Description</a>
 <ul>
-<li><a href="#org280b7db">1.1. Overview</a></li>
-<li><a href="#orgc3650d7">1.2. Course Learning Outcomes &amp; Objectives</a></li>
+<li><a href="#org91cb6f6">1.1. Overview</a></li>
+<li><a href="#org0a2ee9e">1.2. Course Learning Outcomes &amp; Objectives</a></li>
 </ul>
 </li>
-<li><a href="#org2062498">2. Exams</a></li>
-<li><a href="#org074ff12">3. Project</a></li>
-<li><a href="#org0762ab6">4. Attendance/Quizzes/Participation</a></li>
-<li><a href="#org3f5b27d">5. Grading</a>
+<li><a href="#org3c40972">2. Exams</a></li>
+<li><a href="#orga9fa472">3. Project</a></li>
+<li><a href="#org4b868ad">4. Attendance/Quizzes/Participation</a></li>
+<li><a href="#org7db09cd">5. Grading</a>
 <ul>
-<li><a href="#orgac52bd7">5.1. An Important Note on Grading</a></li>
+<li><a href="#orgfb9a414">5.1. An Important Note on Grading</a></li>
 </ul>
 </li>
-<li><a href="#org950bbd3">6. Tentative Outline by Week</a></li>
-<li><a href="#orgb2534cd">7. How To Ask Questions</a></li>
-<li><a href="#org9ee43fe">8. Email Communication</a></li>
-<li><a href="#org143e062">9. Guidelines and Accommodations</a>
+<li><a href="#org00db3e2">6. Tentative Outline by Week</a></li>
+<li><a href="#org4083e9c">7. How To Ask Questions</a></li>
+<li><a href="#org85f60d0">8. Email Communication</a></li>
+<li><a href="#org433c0a5">9. Guidelines and Accommodations</a>
 <ul>
-<li><a href="#orgcb7c50a">9.1. Accommodations for Students with Disabilities</a></li>
-<li><a href="#orgd80262b">9.2. Course Syllabus Disclosure Statement Spring 2020</a></li>
+<li><a href="#org19288fe">9.1. Accommodations for Students with Disabilities</a></li>
+<li><a href="#orgf3cea46">9.2. Course Syllabus Disclosure Statement Spring 2020</a></li>
 </ul>
 </li>
 </ul>
@@ -339,16 +328,16 @@ SCHOOL OF BUSINESS ADMINISTRATION
 </ul>
 
 
-<div id="outline-container-orgf09f138" class="outline-2">
-<h2 id="orgf09f138"><span class="section-number-2">1</span> Description</h2>
+<div id="outline-container-orgdd4454c" class="outline-2">
+<h2 id="orgdd4454c"><span class="section-number-2">1.</span> Description</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <b><b>Course Catalog Description</b></b>: General principles of corporate/managerial finance are presented. Topics include the tax environment, an overview of financial planning and control, working capital management, long term financing, time value of money, capital budgeting, cost of capital, dividend policy, agency theory, and international financial issues. Responsibilities and functions performed by financial analysts, financial managers, and chief financial managers are discussed. (Pre-requisite: ACC 201 or equivalent.)
 </p>
 </div>
 
-<div id="outline-container-org280b7db" class="outline-3">
-<h3 id="org280b7db"><span class="section-number-3">1.1</span> Overview</h3>
+<div id="outline-container-org91cb6f6" class="outline-3">
+<h3 id="org91cb6f6"><span class="section-number-3">1.1.</span> Overview</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>This course will present the fundamentals of managerial finance as a vital part of the complete business ecosystem. Importance is placed on becoming familiar with the rudimentary tools and techniques that act as the basis for all further study and function of finance.</li>
@@ -362,8 +351,8 @@ SCHOOL OF BUSINESS ADMINISTRATION
 </div>
 </div>
 
-<div id="outline-container-orgc3650d7" class="outline-3">
-<h3 id="orgc3650d7"><span class="section-number-3">1.2</span> Course Learning Outcomes &amp; Objectives</h3>
+<div id="outline-container-org0a2ee9e" class="outline-3">
+<h3 id="org0a2ee9e"><span class="section-number-3">1.2.</span> Course Learning Outcomes &amp; Objectives</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 CLO 1. Technical Competence: Adept in applying technology to solve institutional problems and enable effective financial decision making.
@@ -384,8 +373,8 @@ CLO 4. Leadership and Communication: Be capable of expressing key financial conc
 </div>
 </div>
 
-<div id="outline-container-org2062498" class="outline-2">
-<h2 id="org2062498"><span class="section-number-2">2</span> Exams</h2>
+<div id="outline-container-org3c40972" class="outline-2">
+<h2 id="org3c40972"><span class="section-number-2">2.</span> Exams</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 There will be three exams (two during the semester and a final exam).  All exams will be multiple choice.
@@ -397,8 +386,8 @@ Failure to take an exam will result in a grade of 0, unless it is due to a <b><b
 </div>
 </div>
 
-<div id="outline-container-org074ff12" class="outline-2">
-<h2 id="org074ff12"><span class="section-number-2">3</span> Project</h2>
+<div id="outline-container-orga9fa472" class="outline-2">
+<h2 id="orga9fa472"><span class="section-number-2">3.</span> Project</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Value a tolling agreement on a natural gas fired power plant near Boston Mass via discounted cash flows.  This project will make heavy use of core concepts learned in this course&#x2014;namely the calculation of cash flows and the time-value-of-money.  <a href="https://www.eia.gov/electricity/wholesale/#history">Data are here</a>.
@@ -406,8 +395,8 @@ Value a tolling agreement on a natural gas fired power plant near Boston Mass vi
 </div>
 </div>
 
-<div id="outline-container-org0762ab6" class="outline-2">
-<h2 id="org0762ab6"><span class="section-number-2">4</span> Attendance/Quizzes/Participation</h2>
+<div id="outline-container-org4b868ad" class="outline-2">
+<h2 id="org4b868ad"><span class="section-number-2">4.</span> Attendance/Quizzes/Participation</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Throughout the semester I will take attendance, give unanounced quizzes, and otherwise evaluate your participation.  Failure to attend class and participate will reduce your participation score, unless your absence is due to a <b><b>verifiable</b></b> medical or family emergency.  In such a case you must provide documentation.
@@ -416,8 +405,8 @@ Throughout the semester I will take attendance, give unanounced quizzes, and oth
 </div>
 
 
-<div id="outline-container-org3f5b27d" class="outline-2">
-<h2 id="org3f5b27d"><span class="section-number-2">5</span> Grading</h2>
+<div id="outline-container-org7db09cd" class="outline-2">
+<h2 id="org7db09cd"><span class="section-number-2">5.</span> Grading</h2>
 <div class="outline-text-2" id="text-5">
 <div class="org-center">
 <p>
@@ -489,8 +478,8 @@ Throughout the semester I will take attendance, give unanounced quizzes, and oth
 </blockquote>
 </div>
 
-<div id="outline-container-orgac52bd7" class="outline-3">
-<h3 id="orgac52bd7"><span class="section-number-3">5.1</span> An Important Note on Grading</h3>
+<div id="outline-container-orgfb9a414" class="outline-3">
+<h3 id="orgfb9a414"><span class="section-number-3">5.1.</span> An Important Note on Grading</h3>
 <div class="outline-text-3" id="text-5-1">
 <blockquote>
 <p>
@@ -503,8 +492,8 @@ There is no special consideration if you need a certain grade in this course to 
 
 
 
-<div id="outline-container-org950bbd3" class="outline-2">
-<h2 id="org950bbd3"><span class="section-number-2">6</span> Tentative Outline by Week</h2>
+<div id="outline-container-org00db3e2" class="outline-2">
+<h2 id="org00db3e2"><span class="section-number-2">6.</span> Tentative Outline by Week</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 We will cover chapters 1 through 14.  Since this course is asynchronous, you have a measure of flexibility regarding when you cover each chapter.  The due dates for the exams are below:
@@ -530,8 +519,8 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you hav
 </div>
 </div>
 
-<div id="outline-container-orgb2534cd" class="outline-2">
-<h2 id="orgb2534cd"><span class="section-number-2">7</span> How To Ask Questions</h2>
+<div id="outline-container-org4083e9c" class="outline-2">
+<h2 id="org4083e9c"><span class="section-number-2">7.</span> How To Ask Questions</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 <a href="https://stackoverflow.com/help/how-to-ask">See this post.</a>  
@@ -539,8 +528,8 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you hav
 </div>
 </div>
 
-<div id="outline-container-org9ee43fe" class="outline-2">
-<h2 id="org9ee43fe"><span class="section-number-2">8</span> Email Communication</h2>
+<div id="outline-container-org85f60d0" class="outline-2">
+<h2 id="org85f60d0"><span class="section-number-2">8.</span> Email Communication</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 Questions about course material should be posted to the most relevant discussion board.  Email should only be used for personal matters.  When sending an email, be sure to put the course in the subject line (FIN 302). 
@@ -548,16 +537,16 @@ Questions about course material should be posted to the most relevant discussion
 </div>
 </div>
 
-<div id="outline-container-org143e062" class="outline-2">
-<h2 id="org143e062"><span class="section-number-2">9</span> Guidelines and Accommodations</h2>
+<div id="outline-container-org433c0a5" class="outline-2">
+<h2 id="org433c0a5"><span class="section-number-2">9.</span> Guidelines and Accommodations</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 Academic Integrity Policy Students Enrolled in this course are required to understand and fully comply with all aspects of the Academic Integrity Policy as described in the SUNY Polytechnic Institute Handbook (available at:  <a href="https://sunypoly.edu/pdf/student_handbook.pdf">https://sunypoly.edu/pdf/student_handbook.pdf</a> )
 </p>
 </div>
 
-<div id="outline-container-orgcb7c50a" class="outline-3">
-<h3 id="orgcb7c50a"><span class="section-number-3">9.1</span> Accommodations for Students with Disabilities</h3>
+<div id="outline-container-org19288fe" class="outline-3">
+<h3 id="org19288fe"><span class="section-number-3">9.1.</span> Accommodations for Students with Disabilities</h3>
 <div class="outline-text-3" id="text-9-1">
 <p>
 Students with disabilities are welcome at SUNY Polytechnic Institute.
@@ -585,8 +574,8 @@ The Disabilities Services Office is happy to advocate or coordinate with outside
 </div>
 </div>
 
-<div id="outline-container-orgd80262b" class="outline-3">
-<h3 id="orgd80262b"><span class="section-number-3">9.2</span> Course Syllabus Disclosure Statement Spring 2020</h3>
+<div id="outline-container-orgf3cea46" class="outline-3">
+<h3 id="orgf3cea46"><span class="section-number-3">9.2.</span> Course Syllabus Disclosure Statement Spring 2020</h3>
 <div class="outline-text-3" id="text-9-2">
 <blockquote>
 <p>
@@ -621,8 +610,8 @@ NanoFab South
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Matthew Brigida, Ph.D.</p>
-<p class="date">Created: 2020-08-24 Mon 11:08</p>
-<p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
+<p class="date">Created: 2021-05-28 Fri 22:19</p>
+<p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
 </html>
